--- a/test/assets/scss/partials/_tutorial-nav.scss
+++ b/test/assets/scss/partials/_tutorial-nav.scss
@@ -33,7 +33,7 @@
   opacity: .3;
   border-radius: 50%;
   box-shadow: 0 3px 5px $nav-bg;
-  transition: all .5s;
+  transition: transform .5s;
   
   &:before,
   &:after {
@@ -104,7 +104,7 @@
       top: .7em;
       opacity: 0;
       transform: scale(0);
-      transition: all .3s;
+      transition: transform .3s;
     }
 
     &.cur {
