--- a/test/assets/scss/partials/_tutorial-pages.scss
+++ b/test/assets/scss/partials/_tutorial-pages.scss
@@ -19,7 +19,7 @@
   width: 100%;
   height: 100%;
   transform: translate3d(100%, 0, 0);
-  transition: all 1s ease-in-out;
+  transition: transform 1s ease-in-out;
 
   &.show {
     transform: translate3d(0, 0, 0);
@@ -82,7 +82,7 @@
   background: #ffdead;
   padding: 0 3px;
   text-decoration: none;
-  transition: all .3s;
+  transition: transform .3s;
 
   &:before {
     content: '';
