--- a/test/assets/scss/partials/_tutorial-progress.scss
+++ b/test/assets/scss/partials/_tutorial-progress.scss
@@ -10,9 +10,11 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 0;
+    width: 100%;
     height: 100%;
     background: $button-color;
-    transition: width .3s ease-out;
+    transform-origin: left;
+    transform: scaleX(0);
+    transition: transform .3s ease-out;
   }
 }
