--- a/test/assets/scss/partials/_tutorial-nav.scss
+++ b/test/assets/scss/partials/_tutorial-nav.scss
@@ -33,7 +33,7 @@
   opacity: .3;
   border-radius: 50%;
   box-shadow: 0 3px 5px $nav-bg;
-  transition: transform .5s;
+  transition: all .5s;
   
   &:before,
   &:after {
