--- a/test/assets/scss/partials/_tutorial-nav.scss
+++ b/test/assets/scss/partials/_tutorial-nav.scss
@@ -76,21 +76,31 @@
   }
 
   li {
-    position: relative;
-    padding: 0 1em;
-    cursor: pointer;
-    line-height: 2;
     list-style: none;
-    user-select: none;
-    transition: color .3s;
 
     &:last-child {
       border-bottom: none;
     }
+  }
+
+  a {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    padding: 0 1em;
+    line-height: 2;
+    user-select: none;
+    text-decoration: none;
+    color: $nav-color;
+    transition: color .3s;
 
     &:before {
       content: attr(data-index-chain);
       padding-right: 1em;
+    }
+
+    &:hover {
+      color: #fff;
     }
 
     &:after {
@@ -113,18 +123,6 @@
       &:after {
         opacity: 1;
         transform: scale(1);
-      }
-
-      > ol {
-        color: $nav-color;
-      }
-    }
-
-    &:hover {
-      color: #fff;
-      
-      > ol {
-        color: $nav-color;
       }
     }
   }
